Add shorthand take method

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     "autoload": {
         "psr-4": {
             "SebastiaanLuca\\PipeOperator\\": "src"
-        }
+        },
+        "files": [
+            "src/functions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
