--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - nightly
+  - "7.2"
+  - "7.3"
+  - 7.4snapshot
 
 cache:
   directories:
@@ -16,10 +16,11 @@ env:
 
 matrix:
   allow_failures:
-    - php: nightly
+    - php: 7.4snapshot
   fast_finish: true
 
 before_install:
+  - composer validate --strict
   - travis_retry composer self-update
 
 install:
