--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": "^7.2"
     },
     "require-dev": {
+        "ext-mbstring": "*",
         "phpunit/phpunit": "^8.2"
     },
     "autoload": {
