--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "sebastiaanluca/php-pipe-operator",
     "type": "library",
-    "description": "A (hopefully) temporary solution to implement the pipe operator in PHP.",
+    "description": "Method chaining (or fluent expressions) for any value using any method.",
     "keywords": [
         "php",
         "pipe",
@@ -14,15 +14,16 @@
         {
             "name": "Sebastiaan Luca",
             "email": "hello@sebastiaanluca.com",
-            "homepage": "https://www.sebastiaanluca.com",
+            "homepage": "https://sebastiaanluca.com",
             "role": "Author"
         }
     ],
     "require": {
-        "php": "^8"
+        "php": "~8.0|~8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "ext-mbstring": "*"
     },
     "autoload": {
         "psr-4": {
