--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,10 @@
 
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
-/.github      export-ignore
+/.github            export-ignore
 /.gitignore         export-ignore
-/CODE_OF_CONDUCT.md      export-ignore
-/CONTRIBUTING.md      export-ignore
+/.php_cs.dist.php   export-ignore
+/CODE_OF_CONDUCT.md export-ignore
+/CONTRIBUTING.md    export-ignore
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
