--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,8 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.yml]
+[*.md]
+trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
 indent_size = 2
