--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.0, 8.1]
+        php: [8.1]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest]
 
