--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "php": "~8.0|~8.1"
+        "php": "~8.1"
     },
     "require-dev": {
-        "ext-mbstring": "*",
+        "ext-mbstring": "~8.1",
         "friendsofphp/php-cs-fixer": "^3.7",
         "phpunit/phpunit": "^9.5"
     },
