Add support for PHP 8.2

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
         }
     ],
     "require": {
-        "php": "~8.1"
+        "php": "~8.1|~8.2"
     },
     "require-dev": {
-        "ext-mbstring": "~8.1",
-        "friendsofphp/php-cs-fixer": "^3.7",
-        "phpunit/phpunit": "^9.5"
+        "ext-mbstring": "~8.1|~8.2",
+        "friendsofphp/php-cs-fixer": "^3.14",
+        "phpunit/phpunit": "^9.6"
     },
     "autoload": {
         "psr-4": {
@@ -47,8 +47,8 @@
     "scripts": {
         "composer:validate": "@composer validate --strict --ansi",
         "test": "vendor/bin/phpunit",
-        "lint": "vendor/bin/php-cs-fixer fix --dry-run --diff --ansi",
-        "fix": "vendor/bin/php-cs-fixer fix --ansi",
+        "lint": "PHP_CS_FIXER_IGNORE_ENV=true vendor/bin/php-cs-fixer fix --dry-run --diff --ansi",
+        "fix": "PHP_CS_FIXER_IGNORE_ENV=true vendor/bin/php-cs-fixer fix --ansi",
         "check": [
             "@composer:validate",
             "@lint",
