--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [8.1]
+        php: [8.1, 8.2]
         dependency-version: [prefer-lowest, prefer-stable]
         os: [ubuntu-latest]
 
@@ -48,7 +48,7 @@ jobs:
         run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-progress --optimize-autoloader
 
       - name: Lint code
-        run: vendor/bin/php-cs-fixer fix --dry-run --diff
+        run: PHP_CS_FIXER_IGNORE_ENV=true vendor/bin/php-cs-fixer fix --dry-run --diff
 
       - name: Run tests
         run: vendor/bin/phpunit
